hphp/hack/test/typecheck/inout/bad_inout_hint_call1.php.exp
File "bad_inout_hint_call1.php", line 6, characters 7-8:
Invalid argument (Typing[4184])
File "bad_inout_hint_call1.php", line 3, characters 30-32:
This is an inout parameter
File "bad_inout_hint_call1.php", line 6, characters 7-8:
It is incompatible with a normal parameter
